refactor(jvm-tools): 03/05篇极简重写，对标阿里云引言密度
03篇(hsdis)：124行→82行
- 引言从5段缩到1段+图片
- ## 1.承接全部细节，消除引言/正文内容重叠
- 章节合并：## 4-7 → ## 3.1-3.4 + ## 4-6

05篇(JaCoLine)：133行→88行
- 引言从5段缩到3短段+图片
- 删除括号内大段注解引用块
- 章节合并：## 1-3 → ## 1-3，## 4-6 → ## 3-5
- 真实案例从两个独立节合并到2.4